fixed problem regarding random placement of computer's ships. moved the compBoatsPlaced counter so that it only increased the count if a boat was successfully placed with no collisions, rather than being positioned as the last command in the while loop. Still need to program logic that determines whether boats are horizontal or vertical at random. currently each boat is aligned by default.

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 body {
   margin: 0;
   height: 100vh;
-  background-image: url('pexels-lisha-riabinina-37487.jpg');
+  /* background-image: url('pexels-lisha-riabinina-37487.jpg'); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
